fixed banner & spacing.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -40,13 +40,14 @@ body {
   padding:9px 10px 5px;
   height: 205px;
   /*background: transparent url(/images/header_background.png) right top no-repeat;*/
-  background: transparent url(/images/banner.jpg) right top no-repeat;
+  background: transparent url(/images/banner.png) right top no-repeat;
 }
 
 ul#navigation {
   margin: 2;
+  margin-top: 10px;
   padding: 1;
-  height: 8px;
+  height: 6px;
   width: 100%;
 }
 
